--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,7 +8,7 @@
             <!-- Footer Column 1 -->
             <div id="footer-title" class="col-md-4">
                 <h5 id="footer-title">Know More</h5>
-                <p> ABOUT US | OUR SERVICES | OUR TEAM | OUR PARTNERS | OUR CLIENTS | PRIVACY POLICY | FAQs | SITEMAP | CONTACT | COPYRIGHT</p>
+                <p style="font-size: 1.2em;"> About Us | Our Services | Our Team | Our Clients | Our Partners | Privacy Policy | FAQs | Sitemaps | Contact Us | Copyright</p>
                 
             </div>
 
@@ -39,12 +39,11 @@
             </div>
         </div>
         <div class="text-center mt-4">
-            <p>&copy; 2024 Your Company. All rights reserved.</p>
+            <p>&copy; 2024 GB Resume Builder Company. All rights reserved.</p>
         </div>
     </div>
 </footer>
 
 <!-- Include Bootstrap JS (optional) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-</body>
 </html>
