--- a/templates/generateResume.html
+++ b/templates/generateResume.html
@@ -2,121 +2,213 @@
 
 {% block content %}
 <style>
-        body {
+        .body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
         }
+         
         .container {
-            width: 60%;
-            margin: 50px auto;
-            background-color: white;
+            align-items: center;
+            width: 80%;
+            height: 100%;
+            margin: 20px auto;
             padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+ 
+
+        }
+        .grid-container {
+            display: grid;
+            grid-template-rows: repeat(4,400px);
+            grid-template-columns: repeat(2, 400px);
+            grid-gap: 1px;
+            align-items: center;
+            width: 90%;
+            height: 100%;
+            margin: 20px auto;
+            
+        }
+        .item1,.item3,.item5,.item7 {
+            grid-column: 1 / 2; /* Correcting start and end */
+            width: 360px;
+            height: 400px;
+            padding-left: 20px;
+            padding-right: 20px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+                
+        }
+        .item2,.item4,.item6,.item8 {
+            grid-column: 2 / 3; /* Correcting start and end */
+            width: 600px;
+            height: 400px;
+            padding-left: 20px;
+            padding-right: 20px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+              
+        }
+        
+        .profile-header {
+            font-size: 1.2em;
+            text-transform: uppercase;
+            text-align: center;
+            color: #333;
+            margin-top: 20px;
+            margin-bottom: 20px;
+            margin-left: auto;
+            margin-right: auto;
+            border-bottom: 2px solid #000;
+           
         }
         h1 {
+            margin-bottom: 0;
+            text-align: center;
+            color: #333;
+            font-size: 3.5em;
+        }
+        h2 {
+            font-size: 2.5em;
+            text-transform: uppercase;
             text-align: center;
             color: #333;
         }
-        .customer-profile {
-            margin-top: 20px;
-        }
-        .profile-header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px;
-            text-align: left;
-            font-size: 18px;
-        }
-        .profile-section {
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ddd;
-            background-color: #fafafa;
-        }
-        .profile-section p {
-            margin: 5px 0;
+        p{
+            font-size: 2em;
+            margin-bottom: 5px;
         }
         .section-title {
+            text-align: left;
+            margin-top: 20px;
+            padding-bottom: 5px;
             font-weight: bold;
-            margin-bottom: 5px;
+        
+        }
+        .section-divider{
+            border-bottom: 2px solid #000;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        .contact-info, .skills, .education, languages, work-experience, projects, awards, publications, interests,hobby,achievements {
+            margin-top: 20px;
         }
          
     
 </style>
-<body>
     <div class="container">
-        <h1>RESUME</h1>
-    
-        <!-- Start of each customer profile -->
-        <div class="customer-profile">
-            <div class="profile-header">Profile Name: {{ userprofile.previous_work}}</div>
-            <div class="profile-section">
-                <p class="section-title">Name:</p>
-                <p>{{ userprofile.name}}</p>
+            <div class="profile-header">
+                <h1>{{ userprofile.name}}</h1>
+                <p>{{ userprofile.previous_work}}</p>
             </div>
-            <div class="profile-section">
-                <p class="section-title">Email:</p>
-                <p>{{ userprofile.email}}</p>
-            </div>
-            <div class="profile-section">
-                <p class="section-title">Phone:</p>
-                <p>{{ userprofile.phone}}</p>
-            </div>
-            <div class="profile-section">
-                <p class="section-title">Address:</p>
-                <p>{{ userprofile.address}}, {{ userprofile.city}}</p>
-            </div>
-            <div class="profile-section">
-                <p class="section-title">Country:</p>
-                <p> {{ userprofile.country}}</p>
-            </div>
+            <div class="grid-container"> 
+                <div class="item1">
+                    <div class="contact-info">
+                        <h2 class="section-title">Contact</h2>   
+                        <p>{{ userprofile.phone}}</p>
+                        <p>{{ userprofile.email}}</p>
+                        <p>www.google.com</p>
+                        <p>{{ userprofile.address }}{{ userprofile.city }}</p>
+                        <p>{{ userprofile.country }}</p>
+                    </div>
+                    <div class="section-divider"></div>
+                </div> 
+                <div class="item2">
+                    <div class="profile-summary">
+                        <h2 class="section-title">Profile</h2>
+                        <p>{{ userprofile.summary }}</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt quisquam voluptate quaerat deserunt, voluptas,  </p>
 
-            <div class="profile-section">
-                <p class="section-title">Summary:</p>
-                <p> {{ userprofile.summary}}</p>
+                    </div>
+                    <div class="section-divider"></div>
+                </div>
+                
+                <div class="item3">
+                    <div class="skills">
+                        <h2 class="section-title">Skills</h2>
+                        <ul>
+                                {% for skill in userprofile.skills.splitlines %}
+                                <li><p>{{ skill }}</p></li>
+                                {% endfor %}
+                        </ul>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas quam quo iste quam</p>
+                        <div class="section-divider"></div>
+                    </div>
+                    
+                </div> 
+                <div class="item4">
+                    <div class="work-experience">
+                        <h2 class="section-title">Work Experience</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi nam incidunt vitae rem officia inventore, perferendis facilis ex ut consectetur ab culpa molestias architecto corporis.</p>
+                    </div>
+                    <div class="section-divider"></div>
+                </div>
+                
+                <div class="item5">
+                    <div class="languages">
+                        <h2 class="section-title">Languages</h2>
+                        <ul>
+                            <li><p>English</p></li>
+                            <li><p>Hindi</p></li>
+                            <li><p>Panjabi</p></li>
+                            <li><p>Marathi</p></li>
+                            <li><p>Telugu</p></li>
+                             
+                        </ul>
+                    </div>
+                    <div class="section-divider"></div>
+                </div>
+                <div class="item6">
+                    <div class="education">
+                        <h2 class="section-title">Education</h2>
+                        <ul>
+                            <li><p>{{ userprofile.school }}</p></li>
+                            <li><p>{{ userprofile.degree }}</p></li>
+                            <li><p>{{ userprofile.university }}</p></li>
+                            <li><p>PGDMC Course</p></li>
+                            <li><p>CCC Course</p></li>
+                        </ul>
+                    </div>
+                    <div class="section-divider"></div>
+                </div>
+                <div class="item7">
+                    <div class="hobby">
+                        <h2 class="section-title">Hobbies</h2>
+                        <ul>
+                            <li><p>Chess</p></li>
+                            <li><p>Music</p></li>
+                            <li><p>Gardening</p></li>
+                            <li><p>Reading</p></li>
+                            <li><p>Travel</p></li>
+                           
+                        </ul>
+                    </div>
+                  
+                </div>
+                <div class="item8">
+                    <div class="achivements">
+                        <h2 class="section-title">Achievements and Awards</h2>
+                        <ul>
+                            <li><p>Attended seminar in College</p></li>
+                            <li><p>Attended Internship</p></li>
+                            <li><p>Attended Hackathon</p></li>
+                            <li><p>Attended Workshop</p></li>
+                        </ul>
+                    </div>
+                   
+                </div> 
             </div>
-
-            <div class="profile-section">
-                <p class="section-title">School:</p>
-                <p> {{ userprofile.school}}</p>
-            </div>
-
-            <div class="profile-section">
-                <p class="section-title">Highest Degree:</p>
-                <p> {{ userprofile.degree}}</p>
-            </div>
-
-            <div class="profile-section">
-                <p class="section-title">College/University:</p>
-                <p> {{ userprofile.university}}</p>
-            </div>
-
-            <div class="profile-section">
-                <p class="section-title">Skills:</p>
-                <p> {{ userprofile.skills}}</p>
-            </div>
-        </div>
-        <div style="text-align: center; padding-top: 2px;">
-             
-            <!-----  Submit button here ----->
-            <button id="printButton" onclick="printPage()" class="btn btn-primary btn-lg">Click to Print</button>
-            <button id="pdfButton" onclick="pdfPage()" class="btn btn-primary btn-lg">Click to Generate PDF File</button>
-        </div>
-        
-    
-    </div>   
-    <script>
-        function printPage() {
-            // Hide the button
-            document.getElementById('printButton').style.display = 'none';
-            document.getElementById('pdfButton').style.display = 'none';
             
-            // Trigger the print dialog
-            window.print();
-        }
+             
+        </div>
 
+    </div>            
+
+    <script>
+    
         function pdfPage() {
             // Hide the button
             document.getElementById('printButton').style.display = 'none';
