--- a/templates/header.html
+++ b/templates/header.html
@@ -5,14 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <title>Document</title>
+    <title>GB Resume Builder</title>
 </head>
+<style>
+  .nav-item:hover{
+    background-color: #555;
+  }
+  
+</style>
  
  
  
 <body> 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white py-sm-1">
-        <a class="navbar-brand" href="#">Resume Builder</a>
+        <a class="navbar-brand" href="#">GB Resume Builder</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -20,13 +26,13 @@
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
+            <li class="nav-item {% if request.resolver_match.url_name == 'home' %}active{% endif %}">
               <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item {% if request.resolver_match.url_name == 'userform' %}active{% endif %}">
               <a class="nav-link" href="{% url 'userform' %}">Create Resume <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item {% if request.resolver_match.url_name == 'listofusers' %}active{% endif %}">
               <a class="nav-link" href="{% url 'listofusers' %}">List of Users <span class="sr-only">(current)</span></a>
             </li>
           
@@ -38,5 +44,7 @@
           </form>
         </div>
     </nav>
+</body>    
+    
 
     
